XMLtoCSV/objects/unpackaged/objects/PCYC_EM_Event_Signature_Notification__c.object
<CustomObject>
    <fields>
        <fullName>Event_ref__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sign-In Sheet</label>
        <referenceTo>EM_Event_vod__c</referenceTo>
        <relationshipLabel>Event Signature Notifications</relationshipLabel>
        <relationshipName>PCYC_Signature_Notifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Is_On_Demand__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Determines if notification request was On-Demand</description>
        <label>Is On-Demand</label>
        <type>Checkbox</type>
    </fields>
    <label>Event Signature Notification</label>
    <nameField>
        <displayFormat>ESN-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Signature Notifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>